# OCTI_GO2W

./: README.md
ElevatorControl/: CMakeLists.txt  main.cpp
ElevatorControl/include/: elevator_controller.hpp  map_switch.hpp  robot_elevator_client.hpp
ElevatorControl/src/: CMakeLists.txt  elevator_controller.cpp  map_switch.cpp  robot_elevator_client.cpp
slam_code/: auto_start.sh
slam_code/src/FAST_LIO/: CMakeLists.txt
slam_code/src/FAST_LIO/PCD/: scans_507_in.pgm  scans_507_in.yaml  scans_507_out.pgm  scans_507_out.yaml
slam_code/src/FAST_LIO/config/: mid360.yaml
slam_code/src/FAST_LIO/launch/: Pointcloud2Map.launch  gdb_debug_example.launch  global_localization_mid360.launch  mapping_mid360.launch
slam_code/src/FAST_LIO/rviz_cfg/: loam_livox.rviz
slam_code/src/FAST_LIO/src/: laserMapping.cpp
slam_code/src/FAST_LIO_GLOBAL/: CMakeLists.txt  package.xml
slam_code/src/FAST_LIO_GLOBAL/config/: mid360.yaml
slam_code/src/FAST_LIO_GLOBAL/launch/: Pointcloud2Map.launch  global_localization_mid360.launch
slam_code/src/FAST_LIO_GLOBAL/rviz_cfg/: lio_global.rviz
slam_code/src/FAST_LIO_GLOBAL/scripts/: global_localization.py  publish_initial_pose.py  transform_fusion.py
slam_code/src/FAST_LIO_GLOBAL/src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp
slam_code/src/livox_ros_driver2/: build.sh
slam_code/src/livox_ros_driver2/config/: MID360_config.json
slam_code/src/livox_ros_driver2/launch_ROS1/: msg_MID360.launch  rviz_MID360.launch
slam_code/src/map_switch/: CMakeLists.txt  package.xml
slam_code/src/map_switch/launch/: project.launch  publish_map1.launch  publish_map2.launch
slam_code/src/map_switch/scripts/: start_map1.sh  start_map2.sh  (+1 more)
slam_code/src/map_switch2/: CMakeLists.txt  package.xml
slam_code/src/pointcloud_tf/: CMakeLists.txt  package.xml
work_station/: conda.sh  start.sh
work_station/OctiRobotVersion2/: CMakeLists.txt  README.md
work_station/OctiRobotVersion2/path_control/: coordinationTrace.xml  path.xml  temp.xml  test.xml
work_station/OctiRobotVersion2/path_control/include/: deviceBase.hpp  dwa.hpp  laddar_device.hpp  octi_charge.hpp  octi_robot.hpp  octi_xml.hpp  octi_yaml.hpp  video_device.hpp  vision_device.hpp
work_station/OctiRobotVersion2/path_control/include/localPlanner/: local_planner copy.hpp  local_planner.hpp  octi_dwa.hpp
work_station/OctiRobotVersion2/path_control/include/robotShowUi/: ui.hpp
work_station/OctiRobotVersion2/path_control/src/charge/: octi_charge.cpp
work_station/OctiRobotVersion2/path_control/src/dwa/: dwa copy.cpp  dwa.cpp
work_station/OctiRobotVersion2/path_control/src/lad/: laddar_device.cpp
work_station/OctiRobotVersion2/path_control/src/localPlanner/: local_planner copy.cpp  local_planner.cpp
work_station/OctiRobotVersion2/path_control/src/octirobot/: octi_robot.cpp
work_station/OctiRobotVersion2/path_control/src/robotShowUi/: ui.cpp
work_station/OctiRobotVersion2/path_control/src/tinyxml/: tinyxml2.cpp
work_station/OctiRobotVersion2/path_control/src/video/: video_device.cpp
work_station/OctiRobotVersion2/path_control/src/vision/: vision_device.cpp
work_station/OctiRobotVersion2/path_control/src/xml/: octi_xml.cpp
work_station/OctiRobotVersion2/path_control/src/yaml/: octi_yaml.cpp
work_station/http/: CMakeLists.txt  http_server.cpp
work_station/http/include/: 11.text  base64_code.h  data_handle.h  data_type.h
work_station/http/map/: scans2_ps.pgm  scans4_ps.pgm
work_station/http/test/: tcp_test.cpp  udp_test.cpp
work_station/iray_pro/: Xtherm_LinuxSDK_V6.3.7z
work_station/iray_pro/Xtherm_LinuxSDK_V6.3/: SimplePictureProcessing.h  Usb.cpp  communication.hpp  main.cpp  main1  main1111.cpp  thermometry.h  使用说明 （新）.docx
work_station/meter/: README.md  apriltag_dect.py  dect_meter.py  func.py  main.py  read_meter.py  run.py  test.py
work_station/vision/: func_flame.py  func_meter.py  func_smoke_hat.py  main.py  rknnpool_smoke.py  video_number.py
work_station/yw/: com.txt  yw  ywrequestsend.cpp
work_station/yy/: serial_read.cpp  uart
(+18 files in other folders)
